[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owa-graph"
version = "0.1.0"
description = "Pipe-friendly Microsoft Graph CLI - one-off Graph queries with owa-piggy auth"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Carl Joakim Damsleth" }]
dependencies = ["owa-piggy>=0.6.0"]
keywords = [
  "microsoft-graph",
  "graph",
  "microsoft-365",
  "azure",
  "cli",
  "json",
  "outlook",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/damsleth/owa-graph"
Repository = "https://github.com/damsleth/owa-graph"
Issues = "https://github.com/damsleth/owa-graph/issues"
Changelog = "https://github.com/damsleth/owa-graph/releases"

[project.scripts]
owa-graph = "owa_graph:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["owa_graph"]
